# password_manager_web

./: Cargo.toml  README
src/: main.rs
static/: style.css
templates/: add_site.html  index.html  login.html
