[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
askama = "0.12"
env_logger = "0.10"